# plutus-v2-starter-kit

./: README.md  cabal.project  cabal.project.local  plutus-hello-world.cabal
Wallet/: batch107.addr  batch107.skey  batch107.vkey  en107.addr  ent107.skey  ent107.vkey  staking107.skey  staking107.vkey
app/: Main.hs
assets/: .gitignore  alwaysTrueV2.plutus  commands.txt  tx.body  tx.signed  typedAlwaysSucceeds.addr
demo/: myDatum.json  payment.skey  payment.vkey  test.txt  tx.json  tx.signed
src/Hello/: Contract.hs
