cabal-version: 3.0
name: plutus-starter-kit
version: 0.2.1.0
synopsis: Plutus Hello World
description: A simple plutus starter template
author: rvcas, mercurial
maintainer: x@rvcas.dev, clark_alesna@hotmail.com
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Hello.Contract
  build-depends:
    aeson,
    base ^>=4.14.1.0,
    bytestring,
    containers,
    cardano-api,
    data-default,
    freer-extras,
    plutus-contract,
    plutus-ledger,
    plutus-ledger-api,
    plutus-ledger-constraints,
    plutus-script-utils,
    plutus-tx-plugin,
    plutus-tx,
    text,
    serialise
  default-language: Haskell2010
  ghc-options:
    -Wall
    -fobject-code
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-spec-constr
    -fno-specialise

executable plutus-starter-kit
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: 
    base ^>=4.14.1.0,
    plutus-starter-kit >= 0.2.1.0,
    cardano-api,
    optparse-applicative-fork
